feat: working example

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="navBar"></div>
     <!-- <div id="home"></div> -->
     <div id="content"></div>
-    <script src="./packages/single-spa.config.ts"></script>
+    <script src="/build/common-dependencies.js"></script>
+    <script src="/build/single-spa.config.js"></script>
   </body>
 </html>
